metallb/ingress-conf.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-server-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"    
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mybackend-service
            port:
              number: 5000
