metallb/ingress-frontend.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myfrontend-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2  
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /frontend
        pathType: Prefix
        backend:
          service:
            name: myfrontend-service
            port:
              number: 3000
